// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/auto-complete/basic.vue correctly 1`] = `
<div class="nova-auto-complete">
  <div class="nova-auto-complete-toggle">
    <div class="nova-auto-complete-inner"><input placeholder="Input here" autocomplete="off" type="text" class="nova-auto-complete-input"></div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/auto-complete/certain-category.vue correctly 1`] = `
<div class="nova-auto-complete">
  <div class="nova-auto-complete-toggle">
    <div class="nova-auto-complete-inner"><input placeholder="Input here" autocomplete="off" type="text" class="nova-auto-complete-input"></div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/auto-complete/custom.vue correctly 1`] = `
<div class="nova-auto-complete">
  <div class="nova-auto-complete-toggle">
    <div class="nova-auto-complete-inner"><input placeholder="Input email" autocomplete="off" type="text" class="nova-auto-complete-input"></div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/auto-complete/non-case-sensitive.vue correctly 1`] = `
<div class="nova-auto-complete">
  <div class="nova-auto-complete-toggle">
    <div class="nova-auto-complete-inner"><input placeholder="Try to type \`b\`" autocomplete="off" type="text" class="nova-auto-complete-input"></div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/auto-complete/uncertain-category.vue correctly 1`] = `
<div class="nova-auto-complete">
  <div class="nova-auto-complete-toggle">
    <div class="nova-auto-complete-inner"><input placeholder="Input here" autocomplete="off" type="text" class="nova-auto-complete-input"></div>
  </div>
  <!---->
  <!---->
</div>
`;
